Update README.md with new instructions